dark mode fix onload

--- a/index.css
+++ b/index.css
@@ -664,7 +664,7 @@ footer img {
 }
 
 .tour_cards {
-  background-color: rgb(243, 239, 244);
+  background-color: var(--color-hg-dark2);
   width: 350px;
   margin: 20px;
   padding: 2px;
